[gd_scene load_steps=9 format=2]

[ext_resource path="res://Echo/PlayerName.gd" type="Script" id=1]
[ext_resource path="res://Echo/Backgrounds/Stars.jpg" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.054902, 0.0156863, 0.184314, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.698039, 0.858824, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0705882, 0.117647, 0.321569, 1 )

[sub_resource type="Theme" id=2]
/styles/Color = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.160784, 0.0980392, 0.34902, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.501961, 0.317647, 0.831373, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.054902, 0.0156863, 0.184314, 1 )

[node name="PlayerName" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.532676, 0.390141 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 610.126
margin_top = 497.256
margin_right = 731.126
margin_bottom = 511.256
rect_scale = Vector2( 5.87896, 6.97201 )
custom_colors/font_color = Color( 0.913725, 0.901961, 1, 1 )
text = "What's your name?"

[node name="Input" type="LineEdit" parent="."]
margin_left = 358.0
margin_top = 263.0
margin_right = 458.0
margin_bottom = 287.0
rect_scale = Vector2( 3.05319, 2.29062 )
custom_colors/selection_color = Color( 1, 0.592157, 0.631373, 1 )
custom_colors/font_color = Color( 1, 0.815686, 0.815686, 1 )
custom_colors/clear_button_color = Color( 1, 0.815686, 0.815686, 1 )
custom_styles/normal = SubResource( 3 )
align = 1
clear_button_enabled = true
placeholder_text = "Your Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 454.0
margin_top = 326.0
margin_right = 568.0
margin_bottom = 358.0
rect_scale = Vector2( 0.996913, 1.53246 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.815686, 0.815686, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.815686, 1 )
custom_colors/font_color_pressed = Color( 1, 0.815686, 0.815686, 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
disabled = true
text = "Done"

[connection signal="gui_input" from="Input" to="." method="_on_Input_gui_input"]
[connection signal="text_changed" from="Input" to="." method="_on_Input_text_changed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
